[metadata]
name = rvmendillo-video-to-ascii
version = 1.0.1
author = Rey Victor Mendillo
author_email = admin@rvmendillo.com
description = Generates and saves ASCII animation in MP4 format from a video file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rvmendillo/video-to-ascii
project_urls =
    Bug Tracker = https://github.com/rvmendillo/video-to-ascii/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Topic :: Multimedia :: Video :: Conversion
	Topic :: Scientific/Engineering :: Image Processing
	Topic :: Text Processing

[options]
package_dir =
    = src
packages = find:
install_requires =
	opencv-python
	rvmendillo_image_to_ascii
	numpy
	moviepy
python_requires = >=3.6

[options.packages.find]
where = src
